--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <p>Here will be my list of mini-projects and bla-bla</p><br>
-<p>and so on</p>	
+<p><a href="/ch2programStructure/triangle.html">triangle</a></p>	
 </body>
 </html>
