--- a/ch5higherOrderFunctions/motherChildAge.html
+++ b/ch5higherOrderFunctions/motherChildAge.html
@@ -3,11 +3,14 @@
   <head>
     <script type="text/javascript" src="ANCESTRY_FILE.json"></script>
     <script type="text/javascript">
+
       var ancestorList = JSON.parse(ANCESTRY_FILE);
       var byName = {};
+
       ancestorList.forEach(function(person) {
         byName[person.name] = person;
       });
+
       function ageOfMotherWhenBorn(p)
       {
         if (byName[p.mother])
@@ -15,12 +18,14 @@
           return p.born - byName[p.mother].born;
         }
       }
-      console.log(average(ancestorList.map(ageOfMotherWhenBorn).filter(function(ageDif){return ageDif != undefined})));
+      console.log(average(ancestorList.map(ageOfMotherWhenBorn)
+      .filter(function(ageDif){return ageDif != undefined})));
 
       function average(array) {
         function plus(a, b) { return a + b; }
         return array.reduce(plus) / array.length;
       }
+
     </script>
     <meta charset="utf-8">
     <title></title>
